fixed footer overlap of last paragraph (#91)

--- a/css/helpful-material.css
+++ b/css/helpful-material.css
@@ -8,3 +8,7 @@ body {
 .copy {
   padding-left: 50%;
 }
+
+.guides {
+  margin-bottom: 3rem;
+}
